package app.entities;

public class MovieCast {
}
