package app.entities;

public class MovieGenre {

}
